# gac

./: .bumpversion.cfg  .bumpversion.toml  .codeiumignore  .env.example  .gac.env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  DEVELOPMENT.md  HOW_IT_WORKS.md  INSTALLATION.md  LICENSE  LICENSE.txt  Makefile  README.md  REFACTORING.md  ROADMAP.md  SIMPLIFICATION.md  TROUBLESHOOTING.md  USAGE.md  check_env.py  codecov.yml  custom_system_prompt.example.txt  fix_formatter.py  hatch.toml  lefthook.yml  package-lock.json  plan.md  pyproject.toml  run_tests.py  run_tests.sh  setup.cfg  spinner_test.py  test_diff.py  (+1 more)
.githooks/: check-upstream
.github/: CLA.md  GH_README.md  cla.json
.github/workflows/: ci.yml  cla.yml  nightly.yml  publish.yml  release.yml
docs/: CONTRIBUTING.md  CUSTOM_SYSTEM_PROMPTS.md  INSTALLATION.md  RELEASING.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md  WINDOWS_COMPATIBILITY_PLAN.md  error_handling.md  prompts.md
examples/: diff_truncation_demo.py  error_handling_example.py  multi_provider_examples.py  prompts_usage.py  repo_context_example.py
prompts/: default.prompt
scripts/: auto_changelog.py  auto_release.py  function_counter.py  prep_changelog_for_release.py  test_gac_diff.sh  test_gac_preview.sh  test_gac_sandbox.sh  test_scope_flag.sh
src/gac/: __about__.py  __init__.py  __version__.py  _config.env  ai.py  ai_providers.py  ai_utils.py  cache.py  cli.py  commit_manager.py  config.env  config.py  config_cli.py  constants.py  core.py  diff_cli.py  errors.py  files.py  format.py  formatting_controller.py  git.py  git_operations.py  init_cli.py  language_cli.py  main.py  preprocess.py  preview_cli.py  prompt.py  prompts.py  security.py  token_manager.py  utils.py  workflow.py  workflow.py.bak
src/gac/formatting/: __init__.py  formatters.py
src/gac/providers/: __init__.py  anthropic.py  cerebras.py  chutes.py  custom_anthropic.py  custom_openai.py  deepseek.py  fireworks.py  gemini.py  groq.py  lmstudio.py  minimax.py  mistral.py  ollama.py  openai.py  openrouter.py  streamlake.py  synthetic.py  together.py  zai.py
tests/: conftest.py  provider_test_utils.py  test_ai.py  test_ai_providers.py  test_ai_providers_httpx.py  test_ai_providers_integration.py  test_ai_providers_simple.py  test_ai_providers_unit.py  test_ai_utils.py  test_always_include_scope.py  test_basic.py  test_cache.py  test_cli.py  test_config.py  test_config_cli.py  test_constants.py  test_core.py  test_diff_cli.py  test_docs_commit_type.py  test_errors.py  test_format.py  test_formatters.py  test_git.py  test_git_operations.py  test_init_cli.py  test_init_cli_extended.py  test_language_cli.py  test_language_codes.py  test_language_integration.py  test_main.py  test_preprocess.py  test_prompt.py  test_prompt_extended.py  test_prompts.py  test_providers_integration.py  test_providers_mocked.py  test_providers_unit.py  test_scope_flag.py  test_security.py  test_security_extended.py  (+2 more)
tests/providers/: conftest.py  test_anthropic.py  test_cerebras.py  test_chutes.py  test_custom_anthropic.py  test_custom_openai.py  test_deepseek.py  test_fireworks.py  test_gemini.py  test_groq.py  test_lmstudio.py  test_minimax.py  test_mistral.py  test_ollama.py  test_openai.py  test_openrouter.py  test_streamlake.py  test_synthetic.py  test_together.py  test_zai.py
~/.config/gac/: prompt.template
