[build-system]
requires = ["hatchling", "hatch-vcs", "packaging>=23.1"]
build-backend = "hatchling.build"

[project]
name = "gac"
dynamic = ["version"]
description = 'git auto commit'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "cellwebb", email = "cellwebb@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    # AI components - base providers
    "aisuite",
    "anthropic",
    "groq",
    "mistralai",
    "ollama",
    "openai",
    "tiktoken",
    
    # Core functionality
    "pydantic",
    "python-dotenv",
    "docstring_parser",  # needed by aisuite but not in their deps
    
    # CLI and formatting
    "click",
    "halo",
    "questionary",
    "rich",
    
    # Code formatting
    "black",
    "isort",
]

[project.scripts]
gac = "gac.cli:cli"

[project.optional-dependencies]
dev = [
    # Version management
    "bump-my-version",
    
    # Testing
    "pytest",
    "pytest-cov",
    "codecov",
    
    # Linting
    "flake8",
    "flake8-pyproject",
]

[project.urls]
Documentation = "https://github.com/cellwebb/gac#readme"
Issues = "https://github.com/cellwebb/gac/issues"
Source = "https://github.com/cellwebb/gac"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.coverage.run]
source_pkgs = ["gac"]
branch = true
parallel = true
omit = [
  "src/gac/__version__.py",
  "src/gac/main.py",
]

[tool.coverage.paths]
gac = ["src/gac", "*/gac/src/gac"]
tests = ["tests", "*/gac/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "pass",
  "raise ImportError",
  "except ImportError"
]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]
per-file-ignores = "__init__.py:F401"
ignore = "E203,W503"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
only-packages = true
skip-excluded = true

[tool.hatch.build.targets.wheel]
packages = ["src/gac"]
include-files = ["src/gac/config.env"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "tests/",
    "*.tests",
    "*.tests.*",
]
include = [
    "src/gac/config.env",
]

[tool.hatch.envs.default]
dependencies = [
    # AI components
    "aisuite",
    "anthropic",
    "openai",
    "groq",
    "mistralai",
  
    # Core functionality
    "pydantic",
    
    # CLI and formatting
    "halo",
    
    # Code formatting
    "black",
    "isort",
    
    # Testing
    "pytest",
    "pytest-cov",
    "codecov",
    
    # Linting
    "flake8",
    
    # Version management
    "bump-my-version",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests} && coverage report"
lint = [
    "black .",
    "isort .",
    "flake8 .",
]
format = [
    "black .",
    "isort .",
]

[tool.hatch.env]
path = ".venv"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[template.plugins.default]
tests = true
src-layout = true
